style.css
body{
    background-color: #f3e5d8;
    font-family: 'Outfit', sans-serif;

    
}

h1, h2{
    font-family: 'Young Serif', serif;
    color: hsl(14, 45%, 36%);
}
h1{
    color: hsl(24, 5%, 18%);;
}
@font-face {
    font-family: 'outfit';
    src: url('assets/fonts/outfit/static/Outfit-Regular.ttf') format('truetype');
    font-weight: 400;
    font-style: normal;
}

@font-face {
    font-family: 'young-serif';
    src: url('assets/fonts/young-serif/YoungSerif-Regular.ttf') format('truetype');
    font-weight: 400;
    font-style: normal;
}

.recipe-container{
    padding: 2rem;
    max-width: 700px;
    margin: 2rem auto;
    border-radius: 10px;
    background-color: white;
    color: hsl(24, 5%, 18%);

}
.image{
    margin: 0;
}


.recipe-container img{
    width: 100%;
    max-width: 100%;
    height: auto;
    display: block;
    border-radius: 10px;
    
}

h1{
    font-weight: bolder;
    font-size: 40px;
}
p{
    font-weight: light;
    margin-bottom: 1rem;
}

.preparation-time{
    background-color: #f3e5d8;
    border-radius: 10px;
    padding: 10px 20px;
}
.preparation-time h2{
    color: hsl(332, 51%, 32%);
}

li{
    margin-bottom: 0.8rem;   
}


.nutrition table{
    width: 100%;
    border-collapse: collapse;
    margin-top: 1rem;
}
.nutrition td{
    padding: 0.75rem 1rem;
}
.right{
    color: hsl(14, 45%, 36%);
}
.nutrition tr:not(:last-child){
    border-bottom: 1px solid hsl(0, 1%, 65%);
}

.instructions ol li::marker{
    color: hsl(14, 45%, 36%);
    font-weight: bold;
}
.preparation-time ul li::marker{
    color: hsl(332, 51%, 32%);
    font-weight: bold;
}
.ingredients ul li::marker{
    color: hsl(14, 45%, 36%);
    font-weight: bold;
}
.ingredients{
    border-bottom: 1px solid hsl(0, 1%, 65%);
    padding-bottom: 1.5rem;
    margin-bottom: 2rem;
}
.instructions{
    border-bottom: 1px solid hsl(0, 1%, 65%);
    padding-bottom: 1.5rem;
    margin-bottom: 2rem;
}



@media (max-width:600px) {
    .recipe-container{
        margin: 0;
        border-radius: 0%;
    }
    

}

